# scraping_malaria

./: README.md  main.py  pyproject.toml  shit.html
src/: CursoUsp.py  CursosUsp.py  DisciplinaUsp.py  EnsinoUsp.py  UnidadeUsp.py  __init__.py
