[project]
name = "scrape-usp"
version = "1.0.0"
description = "Esse programa faz o scrape dos dados da usp e permite consultas interativas."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "selenium>=4.33.0",
    "setuptools>=80.9.0",
    "webdriver-manager>=4.0.2",
]
